# polyflow-ai

./: .gitignore  CLAUDE.md  README.md  action.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  workflow_request.md
.github/workflows/: polyflow-code-review.yml  polyflow-pr-description.yml  polyflow-security-audit.yml
skills/claude-code/: SKILL.md
skills/openclaw/: SKILL.md
src/polyflow/: cli.py
src/polyflow/engine/: executor.py  hitl.py  runner.py  template.py
src/polyflow/registry/: client.py
tests/: test_executor.py  test_hitl.py  test_template.py
