[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyflow-ai"
version = "0.1.0"
description = "Multi-model AI workflow engine for developers"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Polyflow Contributors"}]
urls = {Homepage = "https://github.com/celesteimnskirakira/polyflow", Repository = "https://github.com/celesteimnskirakira/polyflow", "Bug Tracker" = "https://github.com/celesteimnskirakira/polyflow/issues"}
keywords = ["ai", "workflow", "llm", "claude", "gemini", "gpt-4", "automation", "yaml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "openai>=1.50",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
polyflow = "polyflow.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
